Fix design of right aligned form fields with validation errors

--- a/assets/css/easyadmin-theme/forms.scss
+++ b/assets/css/easyadmin-theme/forms.scss
@@ -106,6 +106,9 @@ label.form-check-label {
 .form-widget input.form-control[align=right] {
     text-align: right;
 }
+.form-widget input.form-control.is-invalid[align=right] {
+    padding-right: 30px;
+}
 
 .form-widget textarea.form-control {
     height: auto;
